tests/snapshots/examples_fixtures/type_system__failing__164_match_unresolved_arm_stays_suppressed.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/164_match_unresolved_arm_stays_suppressed.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `mystery_value`.

  examples/type_system/failing/164_match_unresolved_arm_stays_suppressed.flx:2:13
  |
2 |     let x = mystery_value
  |             ^^^^^^^^^^^^^

Hint:
  Define it first: let mystery_value = ...;
== stdout ==
<not executed>
